fixtures/external/positive/contracts-runtime-values/inventory-runtime-smoke.ts
import { toCellId as runtimeValue0 } from '@mog-sdk/contracts/cell-identity';

void runtimeValue0;
