fixtures/external/negative/embed-full-app-import/smoke.ts
// Full-app embedding lives in @mog-sdk/spreadsheet-app, not @mog-sdk/embed/full-app.

import { MogSpreadsheetApp } from '@mog-sdk/embed/full-app';

void MogSpreadsheetApp;
